# CS-KSpider

Code/: LICENSE  Makefile  README.md  Structure.txt  env.example.txt  pyproject.toml
Code/data/: study_guide.db
Code/study_guide/: __init__.py  __main__.py  cli.py  config.py
Code/study_guide/database/: __init__.py  models.py  operations.py  schema.py
Code/study_guide/export/: __init__.py  anki_export.py  base.py  json_export.py  markdown_export.py
Code/study_guide/generation/: __init__.py  generator.py  prompts.py  schemas.py
Code/study_guide/ingestion/: __init__.py  chunker.py  scanner.py
Code/study_guide/ingestion/extractors/: __init__.py  base.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py  video_extractor.py
Code/study_guide/utils/: __init__.py  audio.py
Code/tests/: __init__.py  conftest.py  create_test_files.py  test_chunking.py  test_database.py  test_export.py  test_extraction.py  test_generation.py  test_integration.py
Code/tests/test_data/: sample.md  sample.txt
Documentation/: KSpiderDocumentation.docx  Roadmap.txt  Tasks.txt
Poster/: CS - KSpider.pptx  howto.txt
PresentationSlides/: slideshowto.txt
Videos/: videoshowto.txt
